# lore-machine

./: .env.development  .env.example  .env.production  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml
Prompts/: commonFemaleNameList.json  commonMaleNameList.json  constants.py  prompts.py
data/: events.json  mock_gpt_response.json  realms_geodata.json  villagers.json  ws_messages.json
data/embeddings/: query_embeddings.json  skewed_emb.json  summary_embeddings.json
docs/: index.md  modules.md
overlore/: config.py  constants.py  dojo_grpc_world_service.py  errors.py  main.py  mocks.py  server.py  types.py  utils.py  ws.py
overlore/db/: base_db_handler.py  db_handler.py  handler.py  handlerVec.py  utils.py  vector_db_handler.py
overlore/eternum/: constants.py  realms.py  types.py
overlore/graphql/: boot_sync.py  client.py  constants.py  event.py  event_sub.py  event_sync.py  parsing.py  query.py  realms.py  subscriptions.py  world_sync.py
overlore/jsonrpc/: constants.py  setup.py  types.py  utils.py
overlore/katana/: client.py
overlore/llm/: client.py  commonFemaleNameList.json  constants.py  guard.py  llm.py  natural_language_formatter.py  openAI.py  open_ai.py
overlore/npcs/: constants.py  spawn.py
overlore/prompts/: commonMaleNameList.json  constants.py  playground.txt  prompts.py
overlore/spawn/: logic.py  mocks.py
overlore/sqlite/: base_db.py  constants.py  db.py  discussion_db.py  errors.py  events_db.py  npc_db.py  npc_spawn_db.py  queries.py  townhall_db.py  types.py  vector_db.py
overlore/torii/: client.py  constants.py  parsing.py  query.py  subscriptions.py
overlore/townhall/: logic.py  mocks.py  request.py  service.py  utils.py
proto/: types.proto  types_pb2.py  world.proto  world_pb2.py  world_pb2_grpc.py
tests/: pytest.ini  test_base_db.py  test_discussion_db.py  test_events.py  test_foo.py  test_npc_db.py  test_npc_spawn_db.py  test_server.py  test_townhall_db.py  test_townhall_service.py  test_v1_mem_loop.py  test_vector_db.py
tests/jsonrpc/: types.py  (+1 more)
vectorDB/: gen_emb_vec.py
(+48 files in other folders)
